# isq-smart

./: .gitignore  CLAUDE.md  README.adoc  README.md  Rakefile  smart_sdu.gemspec
TODO.astro/: 00-overview.md  01-layouts.md  01-shared-utilities.md  06-specs.md  (+35 more)
reference-docs/smartsdu-information-model-share-c6362d946900/: .gitignore  CHANGELOG.md  README.md  bitbucket-pipelines.yml  pyproject.toml  zensical.toml
reference-docs/smartsdu-information-model-share-c6362d946900/docs/: Competency Questions.md  im-overview.md  index.md
reference-docs/smartsdu-information-model-share-c6362d946900/docs/releases/: releases-notes.md
reference-docs/smartsdu-information-model-share-c6362d946900/information_model/: __init__.py  assets.py
reference-docs/smartsdu-information-model-share-c6362d946900/information_model/ontologies/: core-ontology.ttl
reference-docs/smartsdu-information-model-share-c6362d946900/information_model/taxonomies/: bindingness-type.ttl  part-of-speech-type.ttl  provision-supplement-type.ttl  provision-type.ttl  publication-component-type.ttl  publication-type.ttl  term-form-type.ttl
reference-docs/smartsdu-information-model-share-c6362d946900/tests/: core_ontology_test.py  testing_functions.py
reference-docs/smartsdu-information-model-share-c6362d946900/tests/annotation_model_test/: annotations_sample.ttl  cq_query.sparql  test_annotation_model.py
reference-docs/smartsdu-information-model-share-c6362d946900/tests/document_reconstruction_test/: cq_query.sparql  document_sample.ttl  reconstruct_document_sample_code.py  test_document_reconstruction.py
(+2351 files in other folders)
