[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "information-model"
version = "1.0.0"
description = "Information Model ontology assets (RDF/TTL, SHACL, documentation, and examples)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Mohameth Sy" },
  { name = "Panos Mitzias" }
]
keywords = ["ontology", "rdf", "shacl", "turtle"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License", #TODO
  "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
docs = [
    "zensical",
]
tests = [
    "pytest>=7",
    "pytest-cov>=4",
    "rdflib>=6.0.0",
    "owlready2>=0.46"
]
all = [
    "information-model[docs,tests]"
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]

# Include ontology + docs files inside the package
[tool.setuptools.package-data]
information_model = [
  "docs/**",
  "ontologies/**",
  "schemas/**",
  "examples/**",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
